# pyfloor

./: .gitignore  LICENSE.md  README.md  build.sh  dumpdepends.sh  init.sh  install.sh  publish.sh  pyproject.toml  run.sh
pyfloor/: cli.py  project.py
scripts/: check-venv.sh
src/: config.py  main.py  project.py
