[project]
name = "pyfloor"
version = "1.0.2"
description = "Python project manager made specifically for programs, not libraries or small scripts"
authors = [{ name = "boyninja1555", email = "flappyfloorg@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"

[project.scripts]
pyfloor = "pyfloor.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
